fix width spacing on outer-most element

--- a/app/assets/stylesheets/components/_photo.scss
+++ b/app/assets/stylesheets/components/_photo.scss
@@ -28,7 +28,7 @@ $instagram-red: #f04752;
   margin:0;
 
   width: 100vw;
-  height: 100%;
+  height: 100vh;
 
   display: flex;
   flex-direction: column;
